--- a/style.css
+++ b/style.css
@@ -49,6 +49,17 @@ main{
     padding: 10px;
     box-sizing: border-box;
 }
+#audio-tag-cont{
+    display: flex;
+    align-items: center;
+    padding: 0;
+}
+#sound{
+    flex-grow: 1;
+}
+#test-sound{
+    margin-left: 10px;
+}
 .set-alarm{
     width: 50%;
     padding: 10px;
@@ -69,11 +80,15 @@ main{
 .alarm-list{
     width: 100%;
     margin-bottom: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 .alarm-list-item{
     height: 250px;
     width: 250px;
     padding: 20px;
+    margin-bottom: 20px;
     box-sizing: border-box;
     border-radius: 10px;
     background-color: rgb(29, 29, 29);
@@ -84,4 +99,11 @@ main{
 }
 .alarm-time{
     font-size: 3rem;
+}
+.snooze-button{
+    color: black;
+    background-color: rgb(0, 255, 0);
+}
+.snooze-button:active{
+    background-color: rgb(134, 255, 134);
 }
